--- a/package.json
+++ b/package.json
@@ -9,14 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.5",
+    "auth-provider": "^0.6.2",
+    "bcrypt": "^5.1.1",
+    "crypto": "^1.0.1",
+    "express": "^4.19.2",
+    "http-proxy-middleware": "^3.0.0",
+    "jose": "^5.6.3",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.4.1",
+    "next": "14.2.3",
+    "next-auth": "^4.24.7",
+    "nodemailer": "^6.9.14",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.3"
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.51.5",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.23.1",
+    "react-toastify": "^10.0.5",
+    "twilio": "^5.2.0"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "eslint-config-next": "14.2.3",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
