--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@reduxjs/toolkit": "^2.2.5",
     "auth-provider": "^0.6.2",
     "bcrypt": "^5.1.1",
+    "cookie": "^1.0.1",
     "crypto": "^1.0.1",
     "express": "^4.19.2",
     "http-proxy-middleware": "^3.0.0",
